--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,7 @@
 
         <activity
             android:name=".Activities.MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,8 +49,7 @@
         </activity>
         <activity
             android:name=".Activities.ArticleShowActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
